--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
     <div class="conatiner">
         <a target="_blank"  style="color: aliceblue;" href="https://www.google.com">Welcome to google </a>
+        <p>You can whatever you want</p>
+        <a href="/nothing.html">Go back</a>
+
+        <p>
+            Before View this page make sure you have login
+            <a href="login.html">Make Login\</a>
+        </p>
     </div>
 </body>
 </html>
