--- a/list.html
+++ b/list.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lsit</title>
 </head>
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
+</style>
 <body>
 
 <h2>My  List</h2>
-<ul>
+<ol type="a">
   <li id="item1" style="color: orange;">This is Red</li>
   <li id="item2" style="color: blue;">This is Green</li>
   <li id="item3" style="color: yellow;">This is Blue</li>
-</ul>
+</ol>
 </body>
 </html>
